--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet"> 
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<title>RezaDormishian</title>
 	</head>
 	
 	<body>
@@ -47,8 +48,8 @@ var options = {
 	</script>
 		
 		<div id="bg">
-		<a href="rezadormishian.github.io" id="menu1">Bio</a>
-		<a href="rezadormishian.github.io" id="menu2">Blog</a>
+		<a href="https://rezadormishian.github.io/" id="menu1">Bio</a>
+		<a href="https://rezadormishian.github.io/" id="menu2">Blog</a>
 		<div id="text"></div>
 			<div id="main">
 				<div id="img2"></div>
