--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
 
 	<head>
-		<title></title>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-147749381-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-147749381-1');
+</script>
 		<link href="css/h-m-css.css" rel="stylesheet">
 		<script src="scr/jquery.js"></script>
 		<script src="scr/grained.js"></script>
@@ -13,7 +20,8 @@
 	</head>
 	
 	<body>
-	
+
+
 	<script>$(document).ready(function () {
     demos();
 	var t = $('#main').position();
