--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ var options = {
 		
 		<div id="bg">
 		<a href="https://rezadormishian.github.io/" id="menu1">Bio</a>
-		<a href="https://rezadormishian.github.io/" id="menu2">Blog</a>
+		<a href="movies.html" id="menu2">Filmography</a>
 		<div id="text"></div>
 			<div id="main">
 				<div id="img2"></div>
